fixed letter spacing in projects page

--- a/src/pages/Projects/project.scss
+++ b/src/pages/Projects/project.scss
@@ -19,6 +19,7 @@
       text-decoration: none;
       text-transform: uppercase;
       font-size: 12px;
+      letter-spacing: 1.8px;
       font-weight: 600;
       @include display-flex(row,center,center);
 
